Added video to the home page, working on scale / layers

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,9 @@
 {% block content %}
 
   <h1 class="title">Welcome to Greenify!</h1>
-
-    <video autoplay muted loop id="myVideo">
-  <source src="../static/video.mp4" type="video/mp4">
+     <video width="1500" height="700" autoplay muted loop id="myVideo">
+  <source src="/static/video.mp4" type="video/mp4">
     </video>
-
 
 
 {% endblock %}
