--- a/static/base.css
+++ b/static/base.css
@@ -31,7 +31,7 @@ div.body-container {
     height: 100%;
     overflow: hidden;
     width: 100%;
-    color: white;
+    color: black;
 
 
     /* Center all elements in the body */
