Make small adjustments to the calculator css

--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -30,7 +30,7 @@
         </div>
     {% endif %}
     <div class="tab-container">
-        <ul class="nav nav-tabs" id="calculatorTab" role="tablist">
+        <ul class="nav nav-tabs justify-content-end" id="calculatorTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <a
                         class="nav-link active"
@@ -91,7 +91,7 @@
                         aria-selected="false"
                 >Preview</a>
             </li>
-            <li class="nav-item" role="presentation">
+            <li id="align-right" class="nav-item" role="presentation">
                 <a
                         class="nav-link"
                         id="historical-data-tab"
