--- a/static/calculator.css
+++ b/static/calculator.css
@@ -7,7 +7,14 @@
 /* Set up border for the tabs */
 .tab-pane {
     border: 1px solid rgb(222, 226, 230);
-    padding: 10px;
+    padding: 20px;
+    border-radius: 0 0 5px 5px;
+}
+
+/* Round the border of tab-container */
+
+.tab-container {
+    border-radius: 5px;
 }
 
 /* Remove animations for the tooltip. */
@@ -42,4 +49,10 @@
     margin: 10px;
     text-decoration: underline;
     cursor: pointer;
+}
+
+/* Style historical tab away from others */
+
+#align-right {
+    margin-left: auto;
 }
