Remove unneeded next and previous buttons and hide historical data if there is none to display.

--- a/static/calculator.css
+++ b/static/calculator.css
@@ -51,6 +51,14 @@
     cursor: pointer;
 }
 
+.btn-submit {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 10px;
+    text-decoration: underline;
+}
+
 /* Style historical tab away from others */
 
 #align-right {
