--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,134 @@
 
 {% block content %}
 
-  <h1 class="title">Welcome to Greenify!</h1>
-     <video width="1500" height="700" autoplay muted loop id="myVideo">
+    <div class="top-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2 text">
+                <h1 class="wow fadeInLeftBig">Welcome to Greenify!</h1>
+                <div class="description wow fadeInLeftBig">
+                    <p>
+                        Here to help reduce carbon footprints globally and provide environmental expertise
+                    </p>
+                </div>
+                <div class="top-big-link wow fadeInUp">
+                    <a class="btn btn-primary btn-link-1" href="">Sign up</a>
+                    <a class="btn btn-primary btn-link-2 scroll-link" href="">Log in</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="services-container section-container">
+ <div class="container">
+     <div class="row">
+         <video width="2000" height="900" autoplay muted loop id="myVideo">
   <source src="/static/video.mp4" type="video/mp4">
     </video>
+
+
+<div class="services-container section-container">
+    <div class="container">
+        <div class="row">
+            <div class="col services section-description wow fadeIn">
+                <h2>About us</h2>
+
+                <div class="divider-1 wow fadeInUp"><span></span></div>
+            </div>
+        </div>
+         <div class="col services-explain section-description wow fadeIn">
+        <div class="description wow fadeInLeftBig">
+                    <p>
+
+                        Welcome to Greenify, our goal is to raise awareness about climate change and how human activity
+                        can has a devastating effect on the planet. We want to offer you the chance to make a
+                        difference and help contribute to the overall reduction of greenhouse gas emissions through our
+                        range of features including challenges, carbon calculator, the opportunity to donate towards a
+                        given project and our collaborative maps feature running on the latest google maps API technology.
+
+                    </p>
+                </div>
+             <div class="services-container section-container">
+    <div class="container">
+        <div class="row">
+            <div class="col services section-description wow fadeIn">
+                <h2>What do we provide?</h2>
+        <div class="row">
+            <div class="col-md-4 services-box wow fadeInUp">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="services-box-icon">
+                            <i class="fas fa-magic"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Feed</h3>
+                        <p> You will be able to learn more about climate change as well as take part in a variety of
+                            challenges to help reach the UK's goal of cutting down territorial emissions to net zero by
+                            2050. This takes posts page which will be your learning space, where you will find useful
+                            information and fun facts about different aspects related to climate change. On the other
+                            hand, the Challenges page will display a range of challenges related to food, travel, nature
+                            and energy as well as include a button to join in and another one for sharing so that
+                            everyone can feel included and part of the cause. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 services-box wow fadeInDown">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="services-box-icon">
+                            <i class="fas fa-cog"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Donate</h3>
+                        <p> Donation page will display the information about a carbon reducing project to which users
+                            can choose to donate any amount of money they see convenient  in order to make an impact by
+                            helping the given cause. Every month this page will be updated with a new project so we can
+                            make sure we reach all areas affected by global warming and support the maximum number of
+                            different organisations that are making that effort to pull us closer to the goal.
+                            Once again the admin will be the only who will have the ability to change or review any of
+                            the information.
+ </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 services-box wow fadeInUp">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="services-box-icon">
+                            <i class="fab fa-google"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Carbon Calculator</h3>
+                        <p> deliver the service of calculating your own Carbon Footprint by answering a series of
+                            questions. The results will indicate the total amount of greenhouse gases that are generated
+                            by the user’s actions. We believe that this is a crucial service for a more clear and visual
+                            understanding on how our actions affect the planet we live in and how important it is to be
+                            aware of the consequences of the same.
+ </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 services-box wow fadeInUp">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="services-box-icon">
+                            <i class="fab fa-google"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Maps</h3>
+                        <p> The Map tab will show any events related to climate action which are being hosted nearby
+                            the user’s location. The idea behind this service is to offer users a platform where they
+                            can create and announce about any event in order to find more people who would like to
+                            collaborate into making a positive impact.  </p>
+        </div>
+    </div>
+</div>
 
 
 {% endblock %}
