--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,47 @@
 
 {% block content %}
 
+    <style>
+
+        .title{
+            margin-bottom: 15px;
+        }
+
+        .field {
+            margin-bottom: 15px;
+        }
+
+        .form-control {
+            font-family: Arial, serif;
+            border-radius: 25px;
+            border: 2px solid #59886f;
+            padding: 15px;
+
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .error{
+			color: #AB171DFF;
+		}
+
+        .btn{
+            background-color: #59886f;
+            border-color: #59886f;
+
+        }
+
+        .btn:hover{
+            background-color: #71887f;
+            border-color: #71887f;
+        }
+
+
+
+    </style>
+
     <div class="column is-5 is-offset-4">
         <h3 class="title is-3">Register</h3>
         <div class="box">
@@ -16,58 +57,70 @@
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
-                        {{ form.email(class="input", placeholder="Email") }}
+                        {{ form.email(class="form-control", placeholder="Email") }}
+                        <div class="error">
                         {% for error in form.email.errors %}
                             {{ error }}
                         {% endfor %}
+                        </div>
                     </div>
 
                 </div>
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
-                        {{ form.firstname(class="input", placeholder="First Name") }}
+                        {{ form.firstname(class="form-control", placeholder="First Name") }}
+                        <div class="error">
                         {% for error in form.firstname.errors %}
                             {{ error }}
                         {% endfor %}
+                        </div>
                     </div>
                 </div>
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
-                        {{ form.lastname(class="input", placeholder="Last Name") }}
+                        {{ form.lastname(class="form-control", placeholder="Last Name") }}
+                        <div class="error">
                         {% for error in form.lastname.errors %}
                             {{ error }}
                         {% endfor %}
+                        </div>
                     </div>
                 </div>
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
-                        {{ form.phone(class="input", placeholder="Phone") }}
+                        {{ form.phone(class="form-control", placeholder="Phone") }}
+                        <div class="error">
                         {% for error in form.phone.errors %}
                             {{ error }}
                         {% endfor %}
+                        </div>
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
-                        {{ form.password(class="input", placeholder="Password") }}
+                        {{ form.password(class="form-control", placeholder="Password") }}
+                        <div class="error">
                         {% for error in form.password.errors %}
                             {{ error }}
                         {% endfor %}
+                        </div>
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
-                        {{ form.confirm_password(class="input", placeholder="Confirm Password") }}
+                        {{ form.confirm_password(class="form-control", placeholder="Confirm Password") }}
+                        <div class="error">
                         {% for error in form.confirm_password.errors %}
                             {{ error }}
                         {% endfor %}
+                        </div>
                     </div>
                 </div>
                 <div>
-                    {{ form.submit(class="button is-info is-centered") }}
+                    {{ form.submit(class="btn btn-lg btn-primary") }}
                 </div>
             </form>
         </div>
