--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,52 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+    <style>
+
+        .title{
+            margin-bottom: 15px;
+        }
+
+        .field {
+            margin-bottom: 15px;
+        }
+
+        .form-control {
+            font-family: Arial, serif;
+            border-radius: 25px;
+            border: 2px solid #59886f;
+            padding: 15px;
+
+        }
+
+        .error{
+			color: #AB171DFF;
+		}
+
+        .btn{
+            background-color: #59886f;
+            border-color: #59886f;
+
+        }
+
+        .btn:hover{
+            background-color: #71887f;
+            border-color: #71887f;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .g-recaptcha {
+            display: inline-block;
+        }
+
+
+
+    </style>
+
     <div class="column is-4 is-offset-4">
         <h3 class="title">Login</h3>
         <div class="box">
@@ -17,17 +63,21 @@
                         {{ form.csrf_token() }}
                         <div class="control">
                             {{ form.email(class="form-control", placeholder="Email") }}
-                            {% for error in form.email.errors %}
-                                {{ error }}
-                            {% endfor %}
+                            <div class="error">
+                                {% for error in form.email.errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </div>
                         </div>
                     </div>
                     <div class="field">
                         <div class="control">
                             {{ form.password(class="form-control", placeholder="Password") }}
-                            {% for error in form.password.errors %}
-                                {{ error }}
-                            {% endfor %}
+                            <div class="error">
+                                {% for error in form.password.errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </div>
                         </div>
                     </div>
                     {% if session['logins'] > 2 %}
