Link the login/register buttons in index.html to correct pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
                     </p>
                 </div>
                 <div class="top-big-link wow fadeInUp">
-                    <a class="btn btn-primary btn-link-1" href="">Sign up</a>
-                    <a class="btn btn-primary btn-link-2 scroll-link" href="">Log in</a>
+                    <a class="btn btn-primary btn-link-1" href={{ url_for("users.register") }}>Sign up</a>
+                    <a class="btn btn-primary btn-link-2 scroll-link" href={{ url_for("users.login") }}>Log in</a>
                 </div>
             </div>
         </div>
