--- a/static/base.css
+++ b/static/base.css
@@ -62,15 +62,19 @@ form div.field {
 
 .top-content {
     padding: 210px 0;
+
+    width: 100vw;
+    position: relative;
+    left: calc(-50vw + 50%);
 }
 
 .top-content .text {
-    color: #000000;
+    color: white;
 }
 
 .top-content .text h1 {
     margin-top: 25px;
-    color: #000000;
+    color: white;
 }
 
 .top-content .description {
