--- a/templates/create_challenge.html
+++ b/templates/create_challenge.html
@@ -2,6 +2,45 @@
 
 {% block content %}
 
+    <style>
+
+        .title{
+            margin-bottom: 15px;
+        }
+
+        .field {
+            margin-bottom: 15px;
+        }
+
+        .form-control {
+            font-family: Arial, serif;
+            border-radius: 15px;
+            border: 2px solid #59886f;
+            padding: 15px;
+
+        }
+
+        .error{
+			color: #AB171DFF;
+		}
+
+        .btn{
+            background-color: #59886f;
+            border-color: #59886f;
+
+        }
+
+        .btn:hover{
+            background-color: #71887f;
+            border-color: #71887f;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+    </style>
+
     <div class="column is-6 is-offset-3">
         <h3 class="title is-3">Create Challenge</h3>
         <br>
