--- a/templates/index.html
+++ b/templates/index.html
@@ -40,9 +40,10 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text">
                 <h1 class="wow fadeInLeftBig">Greenify</h1>
-                <div class="description wow fadeInLeftBig">
+                <div class="description2 wow fadeInLeftBig">
                     <p>
-                        Here to help reduce carbon footprints globally and provide environmental expertise
+                        "The climate crisis has already been solved. We already have all the facts and solutions. All
+                        we have to do is to wake up and change." ~ Greta Thunberg
                     </p>
                 </div>
             </div>
@@ -54,7 +55,7 @@
 
                 <script>
                     $('.top-content').backstretch([
-                        { url: "/static/video.mp4", duration: 6000, mute: true, alignY: 0, isVideo: true, loop: true}]);
+                        { url: "/static/waterfall.mp4", duration: 6000, mute: true, alignY: 0, isVideo: true, loop: true}]);
                 </script>
 
 </div>
