--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,8 @@
                         <p> The Map tab will show any events related to climate action which are being hosted nearby
                             the user’s location. The idea behind this service is to offer users a platform where they
                             can create and announce about any event in order to find more people who would like to
-                            collaborate into making a positive impact.  </p>
+                            collaborate into making a positive impact.
+                        </p>
         </div>
     </div>
 </div>
@@ -219,7 +220,25 @@
                     $('.bottom-content').backstretch([
                         { url: "/static/monkey.mp4", duration: 6000, mute: true, alignY: 0, isVideo: true, loop: true}]);
                 </script>
+                 </div>
 
 {% endif %}
+
+        <div class="services-container section-container">
+    <div class="container">
+        <div class="row">
+            <div class="col services section-description wow fadeIn">
+                <h2>Contact us</h2>
+
+                <div class="divider-1 wow fadeInUp"><span></span></div>
+            </div>
+        </div>
+         <div class="col services-explain section-description wow fadeIn">
+        <div class="description wow fadeInLeftBig">
+                    <p>
+                        contact
+
+                    </p>
+                </div>
 
 {% endblock %}
