--- a/static/base.css
+++ b/static/base.css
@@ -75,6 +75,13 @@ form div.field {
 .top-content .text h1 {
     margin-top: 25px;
     color: white;
+   text-shadow: 1px 1px 0 rgba(0,0,0,0.4);
+   padding-top: 30px;
+   font-size: 70px;
+   font-weight: 700;
+   text-align: center;
+   font-family: 'Source Sans Pro', sans-serif;
+
 }
 /* first video text */
 .top-content .description {
