--- a/templates/index.html
+++ b/templates/index.html
@@ -179,6 +179,7 @@
                 Climate change has produced a number of threats to wildlife throughout our parks. Rising
                 temperatures lower many species survival rates due to changes that lead to less food,
                 less successful reproduction, and interfering with the environment for native wildlife.
+                Greenify exist to mitigate these impacts with your help.
               <div class="services-container-climate2 section-container">
             <div class="col services section-description-climate wow fadeIn">
         </p>
@@ -221,6 +222,29 @@
                         { url: "/static/monkey.mp4", duration: 6000, mute: true, alignY: 0, isVideo: true, loop: true}]);
                 </script>
                  </div>
+
+                 <div class="contact-us">
+                  <h1>Contact us</h1>
+                     <p>
+                         <span class="Name">
+                             <label>
+                                 <input type="text" name="Name" value="" size="40" placeholder="Name">
+                             </label>
+                         </span>
+                         <span class="Email">
+                             <label>
+                                 <input type="email" name="Email"  size="40" placeholder="Email">
+                             </label>
+                         </span>
+                         <span class="Message">
+                             <label>
+                                 <textarea name="Message" cols="40" rows="10" placeholder="Message"></textarea>
+                             </label>
+                         </span>
+                         <input type="submit" value="Send" class="submit">
+                     </p>
+                 </div>
+        </div>
 
 {% endif %}
 
