--- a/templates/create_donation.html
+++ b/templates/create_donation.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
-{% block content %}
+<style>
+</style>
 
+{% block content %}
     <div class="column is-6 is-offset-3">
         <h3 class="title is-3">Create Donation</h3>
         <div class="box">
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
@@ -32,13 +34,13 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div class="field">
-                    <div class="control">
-                        {{ form.status(class="textarea", placeholder="Status") }}
-                        {% for error in form.status.errors %}
-                            {{ error }}
+                <div class="form-group">
+                    {{ form.image(class="form-control-file") }}
+                    {% if form.image.errors %}
+                        {% for error in form.image.errors %}
+                            <span class="text-danger">{{ error }}</span></br>
                         {% endfor %}
-                    </div>
+                    {% endif %}
                 </div>
                 <div>
                     {{ form.submit(class="button is-info is-centered") }}
