--- a/templates/donate.html
+++ b/templates/donate.html
@@ -1,44 +1,41 @@
 {% extends "base.html" %}
 
-{% block content %}
-
 <style>
-  body {
-    font-family: sans-serif;
+body {
+    ont-family: sans-serif;
     background: white;
+}
 
-
-
-  }
-
-  /* Header/Blog Title */
-  .card-title {
+/* Header/Blog Title */
+.card-title {
     padding: 20px;
     font-size: 35px;
-      font-color: black;
+    font-color: black;
     text-align: center;
-  }
+}
 
-  /* Add a card effect for articles */
-  .card {
+/* Add a card effect for articles */
+.card {
     background-color: white;
     margin: 50px;
-      font-size: 20px
-  }
+    font-size: 20px;
+    padding: 20px;
+}
 
-  .flex-container {
-      display: flex;
-      flex-wrap: wrap;
-  }
-  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 800px) {
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
 
-  }
 </style>
 
+{% block content %}
+
+    <div class="section">
 <div class="flex-container">
   {% for donation in donations %}
-  <div class="card" style="width: 18rem;">
+      <div class="card w-20" style="width: 18rem;">
+    <img class="card-img-top" src="data:image/jpg;base64,{{ donation.image }}" alt="donation_img"  id="imgslot"/> </img>
     <div class="card-body">
       <h5 class="card-title">{{ donation.title}}</h5>
       <h6 class="card-subtitle mb-2 text-muted">Amount: {{ donation.amount}} </h6>
@@ -46,6 +43,7 @@
       <h6 class="card-subtitle mb-2 text-muted">{{ donation.created.strftime('%d-%m-%Y') }}</h6>
       
       <p class="card-text">{{ donation.reason }}</p>
+        <p class="card-text">{{ donation.status }}</p>
 
       <form action="{{ url_for('donate.create_session', id=donation.id) }} " method="post">
         <div class="input-group mb-3">
@@ -60,5 +58,6 @@
   </div>
   {% endfor %}
 </div>
+    </div>
 
 {% endblock %}
